--- a/authentication/AuthenticationExample.xcodeproj/xcshareddata/xcschemes/AuthenticationExample.xcscheme
+++ b/authentication/AuthenticationExample.xcodeproj/xcshareddata/xcschemes/AuthenticationExample.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EAE4CBC024855E3A00245E92"
-               BuildableName = "Swifty Auth.app"
-               BlueprintName = "Swifty Auth"
-               ReferencedContainer = "container:Swifty Auth.xcodeproj">
+               BuildableName = "AuthenticationExample.app"
+               BlueprintName = "AuthenticationExample"
+               ReferencedContainer = "container:AuthenticationExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EAE4CBD624855E3E00245E92"
-               BuildableName = "Swifty AuthTests.xctest"
-               BlueprintName = "Swifty AuthTests"
-               ReferencedContainer = "container:Swifty Auth.xcodeproj">
+               BuildableName = "AuthenticationExampleTests.xctest"
+               BlueprintName = "AuthenticationExampleTests"
+               ReferencedContainer = "container:AuthenticationExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EAE4CBE124855E3E00245E92"
-               BuildableName = "Swifty AuthUITests.xctest"
-               BlueprintName = "Swifty AuthUITests"
-               ReferencedContainer = "container:Swifty Auth.xcodeproj">
+               BuildableName = "AuthenticationExampleUITests.xctest"
+               BlueprintName = "AuthenticationExampleUITests"
+               ReferencedContainer = "container:AuthenticationExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -65,9 +65,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EAE4CBC024855E3A00245E92"
-            BuildableName = "Swifty Auth.app"
-            BlueprintName = "Swifty Auth"
-            ReferencedContainer = "container:Swifty Auth.xcodeproj">
+            BuildableName = "AuthenticationExample.app"
+            BlueprintName = "AuthenticationExample"
+            ReferencedContainer = "container:AuthenticationExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -82,9 +82,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EAE4CBC024855E3A00245E92"
-            BuildableName = "Swifty Auth.app"
-            BlueprintName = "Swifty Auth"
-            ReferencedContainer = "container:Swifty Auth.xcodeproj">
+            BuildableName = "AuthenticationExample.app"
+            BlueprintName = "AuthenticationExample"
+            ReferencedContainer = "container:AuthenticationExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
