--- a/authentication/AuthenticationExample/AuthenticationExample.entitlements
+++ b/authentication/AuthenticationExample/AuthenticationExample.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:swiftyauth.page.link</string>
+		<string>applinks:sen9z.app.goo.gl</string>
 	</array>
 </dict>
 </plist>
