--- a/authentication/AuthenticationExample/AuthenticationExample.entitlements
+++ b/authentication/AuthenticationExample/AuthenticationExample.entitlements
@@ -9,8 +9,6 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:sen9z.app.goo.gl</string>
-	</array>
+	<array/>
 </dict>
 </plist>
