--- a/dynamiclinks/Podfile
+++ b/dynamiclinks/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 platform :ios, '10.0'
 
 # [START pod_ddl]
-pod 'Firebase/Analytics'
+#pod 'Firebase/Analytics'
 pod 'Firebase/DynamicLinks'
 # [END pod_ddl]
 
